# i_know_words

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/i_know_words/: __init__.py  app.py  config.yaml
src/i_know_words/dictionaries/: en_tr.json  tr_en.json
